objects/Project_Budget_Rollup__c.object
<CustomObject>
    <label>Project Budget Rollup</label>
    <nameField>
        <displayFormat>PRR-{00000000}</displayFormat>
        <label>Project Budget Rollup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Budget Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <referenceTo>Time__c</referenceTo>
        <relationshipLabel>Project Budget Rollups</relationshipLabel>
        <relationshipName>Project_Budget_Rollups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget_hrs__c</fullName>
        <label>Budget (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Budget__c</fullName>
        <label>Project Budget</label>
        <referenceTo>Project_Budget__c</referenceTo>
        <relationshipLabel>Project Budget Rollups</relationshipLabel>
        <relationshipName>Project_Budget_Rollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>